2001-04-03  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (read_fstab): Fix detection of username for SMB imports.

2001-04-03  Ravi Pratap  <ravi@che.iitm.ac.in>

	* .cvsignore : add mouse-conf.in

2001-04-02  Michael Meeks  <michael@ximian.com>

	* backends/print.pl.in: Revise to simplify

	* backends/print-conf.in: ditto.

2001-03-30  Ravi Pratap  <ravi@che.iitm.ac.in>

	* mouse-conf.in (get, set, filter) : Add
	(xst_mouse_conf_get, xml_print): Implement

2001-03-29  Ravi Pratap  <ravi@che.iitm.ac.in>

	* mouse-conf.in : Add

	* Makefile.am : Modify accordingly

2001-04-02  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Generate/parse XML suitable for displaying in e-tables.

2001-04-02  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Fixed broken report calls.

2001-04-02  Kenneth Christiansen  <kenneth@gnu.org>

        * perldoc.pl: A JavaDoc like system for Perl
	* option.pl: A module required by the above program.

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Went back underground, now rumored to
	  be living in filesys.pl.in, under the name xst_filesys_parse_fstab().

2001-03-31  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in: Added. Implements parsing of fstab and mtab files,
	  and manipulating the information presented by these as in-memory
	  structures.

2001-03-30  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report): new "::" separated report format.

	* general.pl.in: when asking for report, set $xst_do_report, not
	$xst_do_verbose.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan): Now accepts a filename to scan from. Fallback
	  remains stdin.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Don't use -> for hash indirection.

2001-03-29  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_fstab): Implement.

2001-03-29  Kenneth Christiansen  <kenneth@gnu.org>
