@@ -25,6 +25,7 @@
 
 
 require "___scriptsdir___/util.pl";
+require "___scriptsdir___/general.pl";
 require "___scriptsdir___/debug.pl";
 
 
@@ -342,6 +343,7 @@ sub xst_xml_scan  # (file) If no file specified, reads stdin.
   }
 
   &xst_debug_print_string_to_file ("in.xml", $doc);
+  &xst_archive_data ($doc);
 
   @xst_xml_scan_list = ($doc =~ /([^\<]*)(\<[^\>]*\>)[ \t\n\r]*/mg); # pcdata, tag, pcdata, tag, ...
   $tree = &xst_xml_scan_recurse;
